# android-utils-rs

./: Cargo.toml
android-utils/: Cargo.toml
android-utils/java/: build.gradle  settings.gradle
android-utils/java/src/main/: AndroidManifest.xml
android-utils/java/src/main/java/io/github/gedgygedgy/rust/android/app/: RustService.java
android-utils/java/src/main/java/io/github/gedgygedgy/rust/android/content/: RustServiceConnection.java
android-utils/java/src/main/java/io/github/gedgygedgy/rust/android/os/: RustHandlerCallback.java
android-utils/rust/: lib.rs  log.rs  os.rs  service.rs
java/: build.gradle  settings.gradle
java/test/: build.gradle
java/test/src/main/rust/: Cargo.toml
java/test/src/main/rust/src/: lib.rs
test/: Cargo.toml
test/java/: build.gradle
test/java/src/main/: AndroidManifest.xml
test/java/src/test/java/io/github/gedgygedgy/rust/android/: AndroidTest.java  HandlerTest.java  LogTest.java  ServiceTest.java
test/rust/: lib.rs
