[package]
name = "android-utils"
version = "0.1.0"
authors = ["Gedgy Gedgy <gedgygedgy@protonmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Extra Utilities for Android in Rust"
readme = "README.md"

[lib]
path = "rust/lib.rs"

[dependencies]
jni = "0.19.0"
jni-utils = "0.1.0"
futures = "0.3.15"
once_cell = "1.8.0"
log = "0.4.14"
